Fixing video iframe height on mobile

--- a/resources/assets/sass/_responsive.scss
+++ b/resources/assets/sass/_responsive.scss
@@ -668,6 +668,10 @@
             margin-top: 380px;
         }
     }
+
+    .video-block {
+        min-height: 200px;
+    }
  
 }
 
