--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -745,7 +745,7 @@ a.firmlink:focus, a.firmlink:hover {
 
 .video-block {
     position: relative;
-    height: 0;
+    overflow: hidden;
     padding-bottom: 30%;
     iframe {
         position: absolute;
